syntax = "proto3";

option java_package = "tornaco.apps.shortx.core.proto.fact";
option java_outer_classname = "OuterFacts";
option java_multiple_files = true;

import "shortx/Common.proto";
import "google/protobuf/any.proto";

message AnyFact {
  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message KeyEvent {
  int32 keyCode = 1;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message AdvancedKeyEvent {
  int32 keyCode = 1;
  KeyGesture gesture = 2;
  bool isInterceptMode = 3;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message ScreenOn {
  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message ScreenOff {
  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message UserPresent {
  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message UserPresentAtTheFirstTime {
  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message BatteryLevelChanged {
  // 0 means any
  int32 level = 1;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message BatteryTemperatureChanged {
  // 0 means any
  float temp = 1;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}


message ChargerPlug {
  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message ChargerUnplug {
  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message EdgeGesture {
  Edge edge = 1;
  Gesture gesture = 2;
  bool isIntercept = 3;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

enum Edge {
  LeftTop = 0;
  LeftCenter = 1;
  LeftBottom = 2;
  LeftAll = 3;

  RightTop = 4;
  RightCenter = 5;
  RightBottom = 6;
  RightAll = 7;

  TopLeft = 8;
  TopCenter = 9;
  TopRight = 10;
  TopAll = 11;

  BottomLeft = 12;
  BottomCenter = 13;
  BottomRight = 14;
  BottomAll = 15;
}

enum Gesture {
  DoubleTap = 0;
  LongTap = 1;
  SingleTap = 2;
  SwipeFromBottom = 3;
  SwipeFromRight = 4;
  SwipeFromLeft = 5;
  SwipeFromTop = 6;
}

enum WeekDay {
  MONDAY = 0; TUESDAY = 1; WEDNESDAY = 2; THURSDAY = 3; FRIDAY = 4; SATURDAY = 5; SUNDAY = 6;
}

message RepeatDays {
  repeated WeekDay days = 1;
}

message Alarm {
  // For fact matcher.
  // string tag = 1;
  TimeOfADay triggerAt = 2;
  RepeatDays repeat = 3;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message RandomInPeriod {
  TimeOfADay start = 1;
  TimeOfADay end = 2;

  RepeatDays repeat = 3;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message FixedInPeriod {
  TimeOfADay start = 1;
  TimeOfADay end = 2;

  RepeatDays repeat = 3;
  google.protobuf.Any fixedBy = 4;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message FixedByTimes {
  int32 times = 1;
}

message FixedByInterval {
  int64 interval = 1;
}

message AppBecomeFg {
  repeated AppPkg apps = 1;
  repeated string pkgSets = 2;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message AppBecomeBg {
  repeated AppPkg apps = 1;
  repeated string pkgSets = 2;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message BTStatusChanged {
  OnOffAny ooa = 1;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message BTConnectedTo {
  repeated string device = 1;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message BTDisconnectedFrom {
  repeated string device = 1;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message WifiStatusChanged {
  OnOffAny ooa = 1;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message WifiConnectedTo {
  repeated string ssidList = 1;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message WifiDisconnectedFrom {
  repeated string ssidList = 1;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message MobileDataStatusChanged {
  OnOffAny ooa = 1;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message NFCStatusChanged {
  OnOffAny ooa = 1;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message FlashLightStatusChanged {
  OnOffAny ooa = 1;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message LocationStatusChanged {
  OnOffAny ooa = 1;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message HotSpotStatusChanged {
  OnOffAny ooa = 1;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message DarkModeStatusChanged {
  OnOffAny ooa = 1;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message DNDStatusChanged {
  OnOffAny ooa = 1;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message APMStatusChanged {
  OnOffAny ooa = 1;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message ActivityStarted {
  repeated AppComponent components = 1;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message ActivityStopped {
  repeated AppComponent components = 1;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message ActivityDestroyed {
  repeated AppComponent components = 1;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message Notification {
  // Title or regex
  string title = 1;
  RegexMatchOptions titleRegexOptions = 10;

  // Content or regex
  string contentText = 2;
  RegexMatchOptions contentRegexOptions = 11;

  repeated AppPkg apps = 3;
  repeated string pkgSets = 4;

  string notificationId = 5;
  string notificationChannel = 6;
  bool isFgService = 7;

  string tag = 8;
  string key = 9;

  bool ongoing = 12;

  repeated AndroidIntentExtra extras = 13;
}

message NotificationPosted {
  Notification record = 1;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message NotificationRemoved {
  Notification record = 1;
  bool byUser = 2;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message NotificationUpdated {
  Notification old = 1;
  Notification new = 2;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message TaskRemoved {
  repeated AppPkg apps = 3;
  repeated string pkgSets = 4;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message SystemReady {
  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message AppAdded {
  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message AppRemoved {
  repeated AppPkg apps = 3;
  repeated string pkgSets = 4;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message AppUpdated {
  repeated AppPkg apps = 3;
  repeated string pkgSets = 4;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message PkgStopRunning {
  repeated AppPkg apps = 3;
  repeated string pkgSets = 4;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message AudioFocusGain {
  repeated AppPkg apps = 3;
  repeated string pkgSets = 4;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message AudioFocusLost {
  repeated AppPkg apps = 3;
  repeated string pkgSets = 4;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message AudioFocusChanged {
  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message Broadcast {
  repeated string actions = 1;
  string dataSchema = 2;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message VPNConnected {
  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message VPNDisconnected {
  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message MediaStoreInsert {
  string path = 1;
  string uriString = 2;

  string filterPath = 3;
  RegexMatchOptions options = 4;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message OnStartOp {
  repeated int32 opCodes = 1;

  repeated AppPkg apps = 2;
  repeated string pkgSets = 3;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message OnFinishOp {
  repeated int32 opCodes = 1;

  repeated AppPkg apps = 2;
  repeated string pkgSets = 3;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message OnQSTileClick {
  int32 tileNumber = 1;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message SystemSettingsChanged {
  StringPair urlAndExpectedValueRegex = 1;
  RegexMatchOptions matchOptions = 2;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message CallStateChanged {
  CallState callState = 1;
  string incomingNumber = 2;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message ClipboardContentChanged {
  string content = 1;
  RegexMatchOptions matchOptions = 2;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message GlobalVarChanged {
  string gvId = 1;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message HasFoundNodeOnScreen {
  string packageName = 1;
  string componentName = 2;
  repeated google.protobuf.Any matchers = 3;
  int64 detectTimeout = 4;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message NodeMatcherViewId {
  string id = 1;
}

message NodeMatcherText {
  string text = 1;

  bool isRegex = 2;
  RegexMatchOptions regexOptions = 3;
}

message AppProcessStarted {
  repeated ProcessName processName = 1;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message HeadsetPlug {
  bool isPlug = 1;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

// Sensor
message ScreenRotate {
  ScreenRotateDegree degree = 1;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message WindowRotationChange {
  ScreenRotateDegree degree = 1;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message IMEVisibilityChange {
  bool isShown = 1;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message AppGainWindowFocus {
  repeated AppPkg apps = 1;
  repeated string pkgSets = 2;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message AppLostWindowFocus {
  repeated AppPkg apps = 1;
  repeated string pkgSets = 2;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message DeepLinkCall {
  string deepLinkTag = 1;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message ConnectedWifiSignalLevelChanged {
  int32 level = 1;
  int32 rssi = 2;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message NFCTagDiscover {
  bytes uid = 1;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message Logcat {
  string regex = 1;
  RegexMatchOptions regexMatchOptions = 2;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message BackNavStart {
  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message BackNavDone {
  bool triggerBack = 1;
  bool backType = 2;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

message MethodHook {
  string packageName = 1;
  string className = 2;
  string methodName = 3;
  // true before, false after
  bool beforeMethod = 4;

  repeated MethodHookExpressions expressions = 5;

  MethodHookLifecycle lifecycle = 6;

  repeated google.protobuf.Any constraint = 7;

  string tag = 97;
  CustomContextDataKey customContextDataKey = 98;
  string note = 99;
  string id = 100;
  bool isDisabled = 101;
}

enum MethodHookLifecycle {
  InitZygote = 0;
  LoadedPackage = 2;
}

message MethodHookExpressions {
  string expressionMVEL = 1;
  string contextKey = 2;
}

message MethodHookConstraintParamsCount {
  int32 count = 1;
}

message MethodHookConstraintParamsType {
  repeated string type = 1;
}

message MethodHookConstraintReturnType {
  string type = 1;
}